# dockapps

./: .gitignore
AlsaMixer.app/: Makefile
Temperature.app/: Makefile
bubblemon-dockapp/: ChangeLog  Makefile  Makefile.FreeBSD  Makefile.NetBSD  README  bubblemon.c  sys_freebsd.c  sys_linux.c  sys_netbsd.c  sys_openbsd.c
bubblemon-dockapp/doc/: Xdefaults.sample
bubblemon-dockapp/include/: bubblemon.h  sys_include.h
wmCalClock/Src/: Makefile
wmMatrix/: Makefile
wmSMPmon/wmSMPmon/: Makefile
wmWeather/Src/: Makefile  wmWeather.c
wmacpi/: Makefile
wmacpiload/: .gitignore  acinclude.m4
wmacpiload/src/: Makefile.am
wmbatteries/doc/: wmbatteries.1~
wmbiff/: configure.ac
wmbiff/wmbiff/: gnutls-common.c
wmcalendar/: .gitignore
wmcalendar/Src/: Makefile  calendar.c
wmckgmail/wmckgmail/: Makefile
wmclock/: COPYING
wmcpufreq/wmcpufreq/: wmcpufreq.c  wmcpufreq.c~
wmcpuload/: configure.ac
wmcpuload/src/: Makefile.am
wmfemon/: makefile
wmfire/: AUTHORS  CREDITS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in  fireload_cpu.c  fireload_file.c  lttr.xpm  wmfire.c  wmfire.xpm
wmfire-1.2.4/: .gitignore  ALL_I_GET_IS_A_GREY_BOX  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  wmfire.1
wmfire-1.2.4/src/: Makefile.am  Makefile.in  flameblue.h  flamecorona.h  flamedefault.h  flamegreen.h  icon.xpm  master.xpm  session.c  session.h  wmfire.c
wmfu/: .gitignore  Makefile  wmfu.c
wmfu/linux/: system.c
wmifinfo/: Makefile
wmitime/: Makefile
wmitime/wmitime/: Makefile
wmix/: Makefile
wmix/include/: common.h
wmkeys/: .gitignore  Makefile  wmkeys.c
wmmon/wmmon/: Makefile
wmnet/: getopt.c  getopt1.c
wmnotify/src/: ssl.c
wmppp.app/: Makefile
wmppp.app/wmppp/: Makefile
wmsm.app/wmsm/: Makefile
wmsmixer/: Imakefile
wmspaceclock/: ChangeLog  Makefile  README  blue-float.theme  blue-jump.theme  blue-normal.theme  boring.hands  boring_jump.hands  brown-float.theme  brown-normal.theme  clockapp.cpp  clockapp.h  config.cpp  config.h  configure  dark-float.theme  dark-normal.theme  dockapp.cpp  dockapp.h  floating_tick.hands  floating_tick_out.hands  glow-float.theme  green-float.theme  green-normal.theme  grey-normal.theme  index.html  pclock-1.theme  pclock-2.theme  radar.hands  radar.theme  raster.cpp  raster.h  raster_bad.cpp  raster_bad.h  rgb_buffer.cpp  rgb_buffer.h  scanliner.cpp  scanliner.h  spaceclock.cpp  spaceclock.h  (+5 more)
wmspaceclock/pixmaps/: ticksquare.xpm
wmstickynotes/: Makefile.am
wmsupermon/: Makefile
wmtime/: Makefile
wmtime/wmtime/: Makefile
wmtv/src/: wmtv.c
wmtz/wmtz/: Makefile  wmtz.c
wmweather+/: configure.ac
wmwlmon/: GNUmakefile  wmwlmon.c
